--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,22 @@ body, html {
     height: 100%
 }
 
+/* hide selection on black background */
+::selection {
+    background: rgba(206, 206, 206, 0.28);
+    color: white;
+}
+
+a {
+    color: white;
+}
+
+a:hover {
+    color: white;
+}
+
 .bgimg {
-    background-image: url('#');
+    background-image: url('https://jooinn.com/images/forest-lake-1.jpg');
     height: 100%;
     background-position: center;
     background-size: cover;
@@ -13,16 +27,19 @@ body, html {
     font-size: 25px;
 }
 
-.topleft {
+.logo {
     position: absolute;
-    top: 0;
+    top: 20px;
     left: 16px;
+    padding: 10px;
+    background-color:rgba(0,0,0,.5) !important;
 }
 
 .bottomleft {
     position: absolute;
     bottom: 0;
     left: 16px;
+    font-size: 10px;
 }
 
 .middle {
@@ -31,9 +48,6 @@ body, html {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-}
-
-hr {
-    margin: auto;
-    width: 40%;
+    padding: 20px 20px 5px;
+    background-color:rgba(0,0,0,.5);
 }
